# ROOTSYS

./: .env.example  .gitignore  Cargo.toml  README.en.md  README.ko.md  README.md
.github/workflows/: preflight.yml
config/companies/: README.en.md  README.ko.md  README.md  acme.sample.env
crates/: README.en.md  README.ko.md  README.md
crates/common/: Cargo.toml  README.en.md  README.ko.md  README.md
crates/drivers/: Cargo.toml  README.en.md  README.ko.md  README.md
crates/drivers/src/: lib.rs
crates/fabric/: Cargo.toml  README.en.md  README.ko.md  README.md
crates/kernel/: Cargo.toml  README.en.md  README.ko.md  README.md
crates/linkage/: Cargo.toml  README.en.md  README.ko.md  README.md
crates/ontology/: Cargo.toml  README.en.md  README.ko.md  README.md
crates/runtime/: Cargo.toml  README.en.md  README.ko.md  README.md
crates/shell/: Cargo.toml  README.en.md  README.ko.md  README.md
crates/shell/src/: main.rs
crates/shell/tests/: e2e_cli.rs
docs/: README.en.md  README.ko.md  README.md  ROADMAP_TODOS.md  WHITE_PAPER.md
docs/actions/: README.en.md  README.ko.md  (+4 more)
infra/: README.en.md  README.ko.md  README.md
scripts/: README.en.md  README.ko.md  README.md  create_company_profile.sh  create_sample_dbs.py  run_all_checks_and_prepare_ui.sh  run_complex_pipeline_checks.sh  run_local_mvp_bootstrap.sh  run_service_smoke_tests.sh  validate_company_profile.sh
system/: README.en.md  README.ko.md  README.md
tests/: README.en.md  README.ko.md  README.md
ui/: README.en.md  README.ko.md  README.md  package-lock.json  package.json  tsconfig.json
(+140 files in other folders)
