[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
base64 = "0.22"
chrono = "0.4"
mysql = "24.0"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = "2.9"
