[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
base64 = "0.22"
chrono = "0.4"
mysql = "24.0"
native-tls = "0.2"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-native-tls = "0.5"
r2d2 = "0.8"
r2d2_postgres = "0.18"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = "2.9"
