[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
drivers = { path = "../drivers" }
kernel = { path = "../kernel" }
linkage = { path = "../linkage" }
ontology = { path = "../ontology" }
runtime = { path = "../runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
